--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport-local": "~1.0.0",
     "passport-local-mongoose": "~0.3.0",
     "serve-favicon": "~2.1.3",
-    "socket.io": "~1.1.0"
+    "socket.io": "~1.1.0",
+    "passport-facebook": "~1.0.3"
   }
 }
